feat: add documentation for List Openings.
